Fixed the lifelist category text alignment issue

--- a/trianglesandwiches.com/lifelist/lifelist.css
+++ b/trianglesandwiches.com/lifelist/lifelist.css
@@ -169,7 +169,6 @@ h4 {
 	padding: 5px -15px 5px 5px;
 	background: url("http://trianglesandwiches.com/Images/llcategories/lifegoalsblank.png") no-repeat;
 	display: block;
-	width: 770px;
 	line-height: 50px;
 	min-height: 65px;
 }
